--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,30 +8,26 @@
 </head>
 <body>
     <header>
-        <h1>¿Cómo contactarme?</h1>
+        <nav class = "navbar">
+            <h1>Barbieri Fabrizio Augusto</h1>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="educacion.html">Educación</a></li>
+                <li><a href="proyecto_unity.html">Unity</a></li>
+                <li><a href="proyecto_unreal.html">Unreal</a></li>
+                <li><a href="contact.html">Contacto</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <section>
+        <section class = "info">
             <ul>
                 <li><a href="https://linkedin.com/in/fabrizio-augusto-barbieri">LinkedIn</a></li>
                 <li>fabrizioaugustobarbieri@gmail.com</li>
             </ul>
         </section>
-        <section id="vease">
-            <h3> Véase también</h2>
-            <ul>
-                <li><a href="educacion.html">Educación</a></li>
-                <li><a href="proyecto_unity.html">Proyecto en Unity</a></li>
-                <li><a href="proyecto_unreal.html">Proyecto en Unreal</a></li>
-            </ul>
-        </section>
     </main>
     <footer>
-        <ul>
-            <li>
-                <a href="../index.html">Volver a Home</a>
-            </li>
-        </ul>
     </footer>
 </body>
 </html>
