--- a/pages/proyecto_unreal.html
+++ b/pages/proyecto_unreal.html
@@ -8,26 +8,22 @@
 </head>
 <body>
     <header>
-        <h1>Proyectos hechos con Unity</h1>
+        <nav class = "navbar">
+            <h1>Barbieri Fabrizio Augusto</h1>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="educacion.html">Educación</a></li>
+                <li><a href="proyecto_unity.html">Unity</a></li>
+                <li><a href="proyecto_unreal.html">Unreal</a></li>
+                <li><a href="contact.html">Contacto</a></li>
+            </ul>
+        </nav>
     </header>
-    <section id="mi_video">
+    <section class = "info">
         <h2>Hellreign</h2>
         <video src="../assets/hellreign.mp4" controls ></video>
     </section>
-    <section id="vease">
-        <h3> Véase también</h3>
-        <ul>
-            <li><a href="contact.html">Contacto</a></li>
-            <li><a href="educacion.html">Educación</a></li>
-            <li><a href="proyecto_unity.html">Proyecto en Unity</a></li>
-        </ul>
-    </section>
     <footer>
-        <ul>
-            <li>
-                <a href="../index.html">Volver a Home</a>
-            </li>
-        </ul>
     </footer>
 </body>
 </html>
