--- a/pages/educacion.html
+++ b/pages/educacion.html
@@ -8,9 +8,18 @@
 </head>
 <body>
     <header>
-        <h1>Educación</h1>
+        <nav class = "navbar">
+            <h1>Barbieri Fabrizio Augusto</h1>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="educacion.html">Educación</a></li>
+                <li><a href="proyecto_unity.html">Unity</a></li>
+                <li><a href="proyecto_unreal.html">Unreal</a></li>
+                <li><a href="contact.html">Contacto</a></li>
+            </ul>
+        </nav>
     </header>
-    <section>
+    <section class = "info">
         <h2>Educación Primaria</h2>
         <ul>
             <li>Instituto Gutenberg</li>
@@ -27,20 +36,7 @@
             <li>Universidad Argentina de la Empresa (UADE) - Licenciatura en Desarrollo de Videojuegos (En Pausa)</li>
         </ul>
     </section>
-    <section id="vease">
-        <h3> Véase también</h3>
-        <ul>
-            <li><a href="contact.html">Contacto</a></li>
-            <li><a href="proyecto_unity.html">Proyecto en Unity</a></li>
-            <li><a href="proyecto_unreal.html">Proyecto en Unreal</a></li>
-        </ul>
-    </section>
     <footer>
-        <ul>
-            <li>
-                <a href="../index.html">Volver a Home</a>
-            </li>
-        </ul>
     </footer>
 </body>
 </html>
