--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         </nav>
     </header>
     <main>
+        <section class = "banner">
+            <img src="assets/press_start.webp">
+        </section>
         <section class = "info">
             <h2>Sobre mi</h2>
             <p>
