--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,6 +20,9 @@
         </nav>
     </header>
     <main>
+        <section class = "banner">
+            <img src="../assets/press_start.webp">
+        </section>
         <section class = "info">
             <ul>
                 <li><a href="https://linkedin.com/in/fabrizio-augusto-barbieri">LinkedIn</a></li>
