--- a/pages/educacion.html
+++ b/pages/educacion.html
@@ -19,6 +19,9 @@
             </ul>
         </nav>
     </header>
+    <section class = "banner">
+        <img src="../assets/libro.jpg">
+    </section>
     <section class = "info">
         <h2>Educación Primaria</h2>
         <ul>
