--- a/pages/proyecto_unity.html
+++ b/pages/proyecto_unity.html
@@ -19,6 +19,9 @@
             </ul>
         </nav>
     </header>
+    <section class = "banner">
+        <img src="../assets/unity.jpg">
+    </section>
     <section class = "info">
         <h2>Tyrianoid</h2>
         <video src="../assets/tyrianoid.mp4" controls ></video>
