--- a/pages/proyecto_unreal.html
+++ b/pages/proyecto_unreal.html
@@ -19,6 +19,9 @@
             </ul>
         </nav>
     </header>
+    <section class = "banner">
+        <img src="../assets/unreal.webp">
+    </section>
     <section class = "info">
         <h2>Hellreign</h2>
         <video src="../assets/hellreign.mp4" controls ></video>
