--- a/pages/proyecto_unity.html
+++ b/pages/proyecto_unity.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Proyecto en Unity</title>
 </head>
+
 <body>
     <header>
-        <nav class = "navbar">
+        <nav class="navbar">
             <h1>Barbieri Fabrizio Augusto</h1>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -19,14 +21,27 @@
             </ul>
         </nav>
     </header>
-    <section class = "banner">
-        <img src="../assets/unity.jpg">
+    <section class="banner">
+        <img src="../assets/unity.jpg" />
     </section>
-    <section class = "info">
-        <h2>Tyrianoid</h2>
-        <video src="../assets/tyrianoid.mp4" controls ></video>
+    <section class="info">
+        <article>
+            <h2>Tyrianoid</h2>
+            <p>
+                Este proyecto está desarrollado en C# con un prototipo de motor de videojuegos desarrollado por Nicolás
+                Borromeo (quien actualmente trabaja en Unity), para la materia "Introducción a Orientación a Objetos" de
+                UADE.
+            </p>
+            <div class="video">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/IdetxpMw_AQ?si=A2NGuVm3noszTerx"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
+            </div>
+        </article>
     </section>
-    <footer>
-    </footer>
+    <footer></footer>
 </body>
+
 </html>
