--- a/pages/proyecto_unreal.html
+++ b/pages/proyecto_unreal.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <title>Proyecto en Unreal</title>
 </head>
+
 <body>
     <header>
-        <nav class = "navbar">
+        <nav class="navbar">
             <h1>Barbieri Fabrizio Augusto</h1>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -19,14 +21,27 @@
             </ul>
         </nav>
     </header>
-    <section class = "banner">
+    <section class="banner">
         <img src="../assets/unreal.webp">
     </section>
-    <section class = "info">
-        <h2>Hellreign</h2>
-        <video src="../assets/hellreign.mp4" controls ></video>
+    <section class="info">
+        <article>
+            <h2>Hellreign</h2>
+            <p>
+                Este proyecto fue desarrollado como Tesis junto a mis compañeros Ian Geier (actualmente trabaja en
+                Globant) y Nicolás Coello (actualmente trabaja en TGA) con la cual nos recibimos de la Tecnicatura en
+                Desarrollo de Videojuegos de UADE. Desarrollado con UE4 utilizando Blueprints.
+            </p>
+            <div class="video">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/473f9uEzPak?si=GESiQX4bWhKR2dAn"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </article>
     </section>
     <footer>
     </footer>
 </body>
+
 </html>
