--- a/index.html
+++ b/index.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Home</title>
-
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav class = "navbar">
-            <h1>Barbieri Fabrizio Augusto</h1>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="pages/educacion.html">Educación</a></li>
-                <li><a href="pages/proyecto_unity.html">Unity</a></li>
-                <li><a href="pages/proyecto_unreal.html">Unreal</a></li>
-                <li><a href="pages/contact.html">Contacto</a></li>
-            </ul>
-        </nav>
+      <nav class="navbar">
+        <h1>Barbieri Fabrizio Augusto</h1>
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="pages/educacion.html">Educación</a></li>
+          <li><a href="pages/proyecto_unity.html">Unity</a></li>
+          <li><a href="pages/proyecto_unreal.html">Unreal</a></li>
+          <li><a href="pages/contact.html">Contacto</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section class = "banner">
-            <img src="assets/press_start.webp">
-        </section>
-        <section class = "info">
-            <h2>Sobre mi</h2>
-            <p>
-                Me considero una persona responsable y ordenada, quien se esfuerza por cumplir su rol y sus obligaciones de la merjor manera posible. Me gustaría dedicarme al mundo de los videojuegos, ya sea en su programación o en el control de calidad de los mismos. Siempre estoy dispuesto a seguir aprendiendo nuevas técnicas y/o herramientas que me permitan mejorar. Hasta el momento tengo experiencia en el uso de Motores de videojuegos tales como Unity y el uso del lenguaje C# para el desarrollo de los proyectos, y Unreal Engine 4 y 5, en los cuales me dediqué principalmente a la programación visual mediante su sistema de Blueprints.
-            </p>
-            <p>
-                Además cuento con estudios técnicos sobre electrónica general y cursé algunos años la carrera de Ingeniería Electrónica, esto me permitió aprender sobre el funcionamiento de circuitos electrónicos de baja potencia, circuitos de audio, circuitos electrónicos de control de alta potencia y placas de control PCB y Arduino.
-            </p>
-        </section>
+      <section class="banner">
+        <img src="assets/press_start.webp" />
+      </section>
+      <section class="info">
+        <h2>Sobre mi</h2>
+        <p>
+            Me considero una persona responsable y ordenada, quien se esfuerza por
+            cumplir su rol y sus obligaciones de la merjor manera posible. Me
+            gustaría dedicarme al mundo de los videojuegos, ya sea en su
+            programación o en el control de calidad de los mismos. Siempre estoy
+            dispuesto a seguir aprendiendo nuevas técnicas y/o herramientas que me
+            permitan mejorar. 
+        </p>
+        <p>
+            Tengo experiencia con Unity Engine y su uso del lenguaje C# para
+            el desarrollo de los proyectos, y también con Unreal Engine 4 y 5, en los cuales
+            me dediqué principalmente a la programación visual mediante su sistema
+            de Blueprints.
+        </p>
+        <p>
+          Además cuento con estudios técnicos sobre electrónica general y cursé
+          algunos años la carrera de Ingeniería Electrónica, esto me permitió
+          aprender sobre el funcionamiento de circuitos electrónicos de baja
+          potencia, circuitos de audio, circuitos electrónicos de control de
+          alta potencia y Arduino.
+        </p>
+      </section>
     </main>
-    <footer>
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
