--- a/pages/proyecto_unity.html
+++ b/pages/proyecto_unity.html
@@ -41,7 +41,37 @@
             </div>
         </article>
     </section>
-    <footer></footer>
+    <footer>
+      <!-- no estoy seguro de que colocar en esta seccion -->
+      <h3>
+        Algunos de los juegos que me gustan
+      </h3>
+      <div class="anim-box">
+        <h4>
+          Warframe
+        </h4>
+      </div>
+      <div class="anim-box">
+        <h4>
+          Wakfu
+        </h4>
+      </div>
+      <div class="anim-box">
+        <h4>
+          Age of Mithology
+        </h4>
+      </div>
+      <div class="anim-box">
+        <h4>
+          Phasmophobia
+        </h4>
+      </div>
+      <div class="anim-box">
+        <h4>
+          Hollow Knight
+        </h4>
+      </div>
+    </footer>
 </body>
 
 </html>
