--- a/pages/proyecto_unreal.html
+++ b/pages/proyecto_unreal.html
@@ -45,27 +45,27 @@
       <h3>
         Algunos de los juegos que me gustan
       </h3>
-      <div class="anim-box">
+      <div class="anim-box" href="assets/unity.jpg">
         <h4>
           Warframe
         </h4>
       </div>
-      <div class="anim-box">
+      <div class="anim-box" href="assets/unity.jpg">
         <h4>
           Wakfu
         </h4>
       </div>
-      <div class="anim-box">
+      <div class="anim-box" href="assets/unity.jpg">
         <h4>
           Age of Mithology
         </h4>
       </div>
-      <div class="anim-box">
+      <div class="anim-box" href="assets/unity.jpg">
         <h4>
           Phasmophobia
         </h4>
       </div>
-      <div class="anim-box">
+      <div class="anim-box" href="assets/unity.jpg">
         <h4>
           Hollow Knight
         </h4>
