--- a/index.html
+++ b/index.html
@@ -53,27 +53,27 @@
       <h3>
         Algunos de los juegos que me gustan
       </h3>
-      <div class="anim-box">
+      <div class="anim-box" href="assets/unity.jpg">
         <h4>
           Warframe
         </h4>
       </div>
-      <div class="anim-box">
+      <div class="anim-box" href="assets/unreal.webp">
         <h4>
           Wakfu
         </h4>
       </div>
-      <div class="anim-box">
+      <div class="anim-box" href="assets/libro.jpg">
         <h4>
           Age of Mithology
         </h4>
       </div>
-      <div class="anim-box">
+      <div class="anim-box" href="assets/press_start.webp">
         <h4>
           Phasmophobia
         </h4>
       </div>
-      <div class="anim-box">
+      <div class="anim-box" href="assets/unity.jpg">
         <h4>
           Hollow Knight
         </h4>
